<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_examplesdk"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="@dimen/pmborder_medium"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_header"
            android:layout_marginBottom="@dimen/pmborder_xxsmall"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="?attr/colorOnBackground" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="@dimen/pmborder_medium"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="1"
                    android:hint="@string/list_hint"
                    android:layout_marginBottom="@dimen/pmborder_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_listurl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textWebEmailAddress"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radio_themes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/pmborder_medium"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_theme_default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/theme_default" />

                    <RadioButton
                        android:id="@+id/radio_theme_custom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/theme_custom" />
                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/actionbutton" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/label_resultheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/result_header"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="?attr/colorOnBackground"
            android:layout_marginBottom="@dimen/pmborder_xxsmall"
            android:layout_marginTop="@dimen/pmborder_medium" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/layout_result"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/pmborder_medium">

                <TextView
                    android:id="@+id/label_resultcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorOnBackground"
                    android:text="@string/resultcode" />

                <TextView
                    android:id="@+id/text_resultcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?attr/colorOnBackground"
                    android:layout_marginBottom="@dimen/pmborder_medium" />

                <TextView
                    android:id="@+id/label_resultinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorOnBackground"
                    android:text="@string/resultinfo" />

                <TextView
                    android:id="@+id/text_resultinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?attr/colorOnBackground"
                    android:layout_marginBottom="@dimen/pmborder_medium" />

                <TextView
                    android:id="@+id/label_interactioncode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorOnBackground"
                    android:text="@string/interactioncode" />

                <TextView
                    android:id="@+id/text_interactioncode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?attr/colorOnBackground"
                    android:layout_marginBottom="@dimen/pmborder_medium" />

                <TextView
                    android:id="@+id/label_interactionreason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorOnBackground"
                    android:text="@string/interactionreason" />

                <TextView
                    android:id="@+id/text_interactionreason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?attr/colorOnBackground"
                    android:layout_marginBottom="@dimen/pmborder_medium" />

                <TextView
                    android:id="@+id/label_paymenterror"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorOnBackground"
                    android:text="@string/paymenterror" />

                <TextView
                    android:id="@+id/text_paymenterror"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/pmborder_medium"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?attr/colorOnBackground" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
